# ROALS-Windows-App

./: AGENTS.md  ARCHITEKTURE.md  README.md  README_DEV.md  ROALS_APP_RULES.md  SPEC.md  TASKS.md  pyproject.toml  roals_desktop.toml  status_reader.py
scripts/: run_dev.ps1
src/roals_app/: __init__.py  __main__.py  main.py
src/roals_app/core/: __init__.py  config.py  runner_trigger.py  status_reader.py
src/roals_app/ui/: log_viewer.py  main_window.py
tests/: .gitkeep
