[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roals-desktop"
version = "0.1.0"
description = "ROALS Windows Desktop App (read-only)"
requires-python = ">=3.11,<3.12"
dependencies = [
  "PySide6==6.7.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
roals-desktop = "roals_app.main:main"
